# Robotic-Exam

C++ exam(PZH)/: Q_1.cpp  Q_2.cpp  Q_3.cpp  Q_4.cpp  Q_5.cpp  Q_6.cpp  Q_7.cpp
ros_exam/src/test1/: CMakeLists.txt  package.xml
ros_exam/src/test1/launch/: custom_pub2sub.launch.py  dual_service_client.launch.py  pub2sub.launch.py  service_client.launch.py  turtle_move_square.launch.py  turtle_tf2_demo.launch.py  turtle_tf2_fixed_frame_demo.launch.py
ros_exam/src/test1/src/: dual_service_client_a.cpp  dual_service_client_b.cpp  pub_custom.cpp  publisher.cpp  service_client.cpp  service_client1.cpp  service_server.cpp  sub_custom.cpp  subscriber.cpp  tf2_listener.cpp  turtle_move_square_inshape.cpp
ros_exam/src/tutorial_interfaces/: CMakeLists.txt  package.xml
ros_exam/src/tutorial_interfaces/msg/: Sphere.msg
ros_exam/src/tutorial_interfaces/srv/: AddThreeInts.srv
